=========================================================================
CHANGE LOG
=========================================================================


2007-08-15
	
	* added sys.stdout.writelines emulation	
	
2007-08-14  Warren L. DeLano <warren@delsci.com>

	* sys.argv if not definied, now set using __main__.pymol_argv
	
	* added util.cnc keyword (formerly just an api function)
	
2007-08-02  Warren L. DeLano <warren@delsci.com>

	* incorporated Michael Lerner's suggestion for argument handling
	    pymol -c script.py --do=something --when=now
	    sys.argv = [ 'script.py', '--do=something' , '--when=now' ]
	
2007-07-30  Warren L. DeLano <warren@delsci.com>

	* fixed memory leak with gradients
	
2007-07-25  Warren L. DeLano <warren@delsci.com>

	* fixed bug with command-line rendering with groups 
			
	* worked-around problem with .MOE triple-bond valence info

	* fixed bug in .MOE reader with duplicate graphics object names

2007-07-23  Warren L. DeLano <warren@delsci.com>

	* fixed bug (mostly) harmless bug unpacking colors from sessions
	
	* fixed problems with box selecting when using non-default stereo
	parameters
	
2007-07-18  Warren L. DeLano <warren@delsci.com>

	* fixed problems with atomic picking when using non-default
	stereo parameters
	
2007-07-09  Warren L. DeLano <warren@delsci.com>

	* DrgO mouse action added

	* PyMOL 1.0 branch created
	
2007-07-08  Warren L. DeLano <warren@delsci.com>

	* fixed atom picking in stereo modes with customized parameters
	
	* adjusted idle behavior when playing movies, sculpting, etc.

	* added new selection operators: masked and protected

2007-07-03  Warren L. DeLano <warren@delsci.com>

	* select no longer 
	
	* missing more changelogs!

2007-06-21  Warren L. DeLano <warren@delsci.com>

	* issued PyMOL 1.0, with updates to the help menu

	* updated numerous command entries in code for online support
	
	* missing ChangeLog entries for the past few weeks...ugh.
	